# ROS_PO

./: .gitignore  README.md  test.sh
matlab/: cartesian_trajectory_planner.slxc  cartesian_waypoints_planner.slxc  controller_joint.slxc  controller_joint.tgz  dynsim_2link_planar.slx  dynsim_2link_planar.slxc  dynsim_2link_planar.tgz  dynsim_test_urdf.slx  dynsim_test_urdf_init.m  init_2link_planar.m  init_robot.m  joint_trajectory_planner.slxc  kinsim_2link_planar.slx  kinsim_2link_planar.slx.r2019b  kinsim_2link_planar.tgz  robot_init.m
matlab/cartesian_trajectory_planner/: cartesian_trajectory_planner.slx  cartesian_trajectory_planner.slxc  cartesian_trajectory_planner.tgz
matlab/cartesian_trajectory_planner_2/: cartesian_trajectory_planner_2.slx  cartesian_trajectory_planner_2.slx.autosave  cartesian_trajectory_planner_2.slx.original  cartesian_trajectory_planner_2.slxc  cartesian_trajectory_planner_2.tgz  temp.slx
matlab/cartesian_waypoints_planner/: cartesian_trajectory_planner_3.slxc  cartesian_waypoints_planner.slx  cartesian_waypoints_planner.slx.original  cartesian_waypoints_planner.slxc  cartesian_waypoints_planner.tgz  prova.m
matlab/controller/: controller.slx  controller.slxc  controller.tgz
matlab/controller_cartesian/: controller_cartesian.slx  controller_cartesian.slxc  controller_cartesian.tgz
matlab/controller_joint/: cartesian_waypoints_planner.slxc  controller_joint.slx  (+4 more)
scripts/: controller_joint.bag  joint1.bag  plot_controller_cartesian.py  plot_controller_joint.py
src/pub_sub/: package.xml
src/pub_sub/src/: publisher.cpp  subscriber.cpp
(+1968 files in other folders)
